feat: new test + readme with outcome